prusti-tests/tests/verify/ui/no-structural-eq.stderr
error: [Prusti: invalid specification] cannot compare values of type &[i32] in specifications, as it has no structural equality
 --> $DIR/no-structural-eq.rs:5:12
  |
5 | #[requires(a[0..2] == [0, 0])]
  |            ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

